--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
+		"dev": "vite dev --mode development",
+		"build": "vite build --mode production",
 		"preview": "vite preview",
 		"test:e2e": "playwright test",
 		"test": "npm run test:e2e"
