--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
 		"test": "npm run test:e2e"
 	},
 	"dependencies": {
-		"jwt-decode": "^4.0.0",
-		"svelte-i18n": "4.0.1"
+		"jwt-decode": "^4.0.0"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.45.3",
-		"@smui/icon-button": "^8.0.0-beta.3",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
